Creates a database for Mockaroo app data for groceries. Adds a new ProductsDAO class.

--- a/DatabaseAppMockarooData.csproj
+++ b/DatabaseAppMockarooData.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.4" />
   </ItemGroup>
 
 </Project>
